<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">journey_dp</string>
    <string name="welcome">Welcome there will be login</string>
    <string name="info_text">Plan your journey</string>
    <string name="plane_your">Plan your</string>
    <string name="start">start</string>
    <string name="back_to_home">go back</string>
    <string name="home">Home</string>
    <string name="journey">Plan your Journey</string>
    <string name="show_map">Map</string>
    <string name="location">location</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="show_on_map">show on map</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login_user">Login</string>
    <string name="register_user">Register</string>
    <string name="login">Login</string>
    <string name="map">Map</string>
    <string name="plan">New Journey</string>
    <string name="profile">Profile</string>
    <string name="log_out">log out</string>
    <string name="lat">0.0</string>
    <string name="lon">0.0</string>
    <string name="default_location">Bratislava</string>
    <string name="default_lat">48.148598</string>
    <string name="default_lon">17.107748</string>
    <string name="place_name">Place Name</string>
    <string name="please_write_journey_title">Please write Journey Title</string>
    <string name="journey_title">Journey Title</string>
    <string name="info">First add your Start destination</string>
    <string name="my_location">My Location</string>
    <string name="add_input">Add</string>
    <string name="destination">Destination</string>

    <string name="car_directions_time">50 m</string>
    <string name="train_directions_time">1 h</string>
    <string name="walk_directions_time">1 d</string>
    <string name="bicycle_directions_time">5 h</string>
    <string name="bus_directions_time">2.5 h</string>
    <string name="walk">walking</string>
    <string name="bus">bus</string>
    <string name="bike">bicycling</string>
    <string name="train">train</string>
    <string name="car">driving</string>
    <string name="finish_plan">Finish plan</string>
    <string name="test_string_for_steps">Pokračujte smerom na hodžovo namestie</string>
    <string name="test_duration_distance">0,4 km \n 1 min</string>
    <string name="test">test</string>
    <string name="test_total_duration_25_h">Total Duration : 0.0 h</string>
    <string name="test_total_distance_500_km">Total Distance : 0.0 km</string>
    <string name="back_to_plan">back to plan</string>
    <string name="my_location_icon">my location icon</string>
    <string name="holder_bottom_sheet">holder for manipulating bottom sheet</string>
    <string name="info_image">info image about place</string>
    <string name="attributions">attributions</string>
    <string name="add_note_hint">Add note to destination</string>
    <string name="add_note">Add note</string>
    <string name="note">note</string>
    <string name="reservation">Reservation</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="payment_value">0.00</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="name_journey">Add name to your journey</string>
    <string name="name_your_journey">Name your journey</string>
    <string name="journey_for_adventure">Journey for adventure</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">profile picture</string>
    <string name="test_name_of_user">Lukáš Lobl</string>
    <string name="test_number">All journeys : 10</string>
    <string name="test_journey_name">Journey 1</string>
    <string name="totalDistance_test">Total Distance: 650,59 km</string>
    <string name="totalDuration_test">Total Duration: 20 h 45 m</string>
    <string name="total_destinations">Total Journeys: </string>
    <string name="total_distance">Total Distance: </string>
    <string name="total_destinations_test">Total Destinations: 10</string>
    <string name="show">Show</string>
    <string name="share">Share</string>
    <string name="days">Days: </string>
    <string name="hours">Hours: </string>
    <string name="minutes">Min: </string>
    <string name="not_note">No note</string>
    <string name="note_to_destination"> Note to destination :</string>
    <string name="deep_link_title">shared journey link</string>
    <string name="deep_link">https://planjourney/map?id=</string>
    <string name="delete_item">Delete Item</string>
    <string name="google_login">Google Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="web_client_id">243740589989-skcc6ml25gdmg2kbosi3kas1d0dfk1ff.apps.googleusercontent.com</string>
    <string name="profile_item">profile item</string>
    <string name="information_from_wikipedia">information from wikipedia</string>
    <string name="about_journey">About Journey</string>
    <string name="about">about</string>
    <string name="back_to_profile">back to profile</string>
    <string name="place_image">place_image</string>
    <string name="find_user_location">Find user location</string>
    <string name="about_app">Application was create for Diploma Thesis.
        You can create journeys and share them with your friends via link</string>
    <string name="version">Version 1.0.0</string>
    <string name="created">Created in 2023</string>
    <string name="copyright">Copyright luxxao 2023</string>
    <string name="find_friends">Find Friends</string>
    <string name="search_friends">Search friends</string>
    <string name="follow">follow</string>
    <string name="following">following</string>
    <string name="unfollow">unfollow</string>
    <string name="send_a_request">request was send</string>
    <string name="accept_request">Accept</string>
    <string name="cancel_request">Cancel</string>
    <string name="followed"> followed : </string>
    <string name="followers"> followers : </string>
    <string name="show_user_profile">show user profile</string>
    <string name="clear">Clear</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_followers">back to followers</string>


</resources>