<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.journey.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/wrapper_of_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/back_to_profile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingStart="4dp"
                android:src="@drawable/back_icon"
                android:contentDescription="@string/back_to_profile" />
            <TextView
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="48dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/about_journey" />

        </LinearLayout>

        <TextView
            android:id="@+id/information_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/about_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_of_about_app"
            app:layout_constraintVertical_bias="0.0"
            />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/information_text"
            app:layout_constraintVertical_bias="0.0"
            />

        <TextView
            android:id="@+id/created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/created"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/version"
            app:layout_constraintVertical_bias="0.0"
            />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/copyright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/created"
            app:layout_constraintVertical_bias="0.0"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>






</layout>