<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="step"
            type="com.example.journey_dp.data.domain.Step" />

        <variable
            name="model"
            type="com.example.journey_dp.ui.viewmodel.MapViewModel" />


        <import type="android.view.View" />
    </data>


    <LinearLayout
        android:id="@+id/layout_for_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        >

        <ImageView
            android:id="@+id/maneuver_imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/turn_left"
            android:contentDescription="@string/test"
            />

        <TextView
            android:id="@+id/instructions_textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/test_string_for_steps"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/travel_mode_imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_directions_car_24"
            android:contentDescription="@string/test" />

        <TextView
            android:id="@+id/duration_and_distance_textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/test_duration_distance"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textStyle="bold"

            />



    </LinearLayout>


</layout>