<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.maps.TestMapFragment">

    <data>

        <variable
            name="model"
            type="com.example.journey_dp.ui.viewmodel.MapViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:clipToPadding="false"
            app:cardUseCompatPadding="false"
            app:layout_collapseMode="parallax"
            android:visibility="visible"
            >

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:src="@color/places_autocomplete_search_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="5dp"
                app:iconifiedByDefault="true"

                app:queryHint="Search Here" />

        </androidx.cardview.widget.CardView>



        <fragment
            android:id="@+id/google_map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <FrameLayout
            android:id="@+id/bottom_sheet_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:background="@drawable/rounded"
            >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_remove_24"
                android:scaleType="centerCrop"
                android:layout_gravity="center|top"
                 />

            <LinearLayout
                android:id="@+id/layout_for_add_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_mxlarge"
                android:layout_marginBottom="@dimen/spacing_mlarge"
                android:layout_marginLeft="@dimen/spacing_mlarge"
                android:layout_marginRight="@dimen/spacing_mlarge"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_middle"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:src="@drawable/ic_baseline_my_location_24"
                    />

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="-33dp"
                    android:background="@drawable/ic_baseline_more_vert_24" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/my_location_label"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:textAlignment="center"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:visibility="visible"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_location_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#757575"
                        android:hint="@string/destination"

                        />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/test_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="@dimen/spacing_xmedium"
                    android:layout_marginRight="@dimen/spacing_middle"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:background="@drawable/ic_baseline_add_circle_24"
                    android:contentDescription="@string/add_input" />

            </LinearLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                tools:context=".ui.fragments.maps.TestFragment">

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scrollbarFadeDuration="@integer/material_motion_duration_medium_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/inputs_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="LinearLayoutManager"
                        tools:itemCount="3"
                        tools:listitem="@layout/destination_item"
                        />
                </ScrollView>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/material_divider"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="@dimen/spacing_smlarge"
                    app:dividerInsetEnd="16dp"
                    app:dividerInsetStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scrollView"
                    app:layout_constraintVertical_bias="0.0"
                    />




            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/directions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="420dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_divider"
                android:visibility="gone"
                >

                <ImageView
                    android:id="@+id/car_directions_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:contextClickable="true"
                    android:contentDescription="@string/car"
                    android:src="@drawable/ic_baseline_directions_car_24"
                    android:clickable="true"
                    />

                <TextView
                    android:id="@+id/car_directions_time"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/car_directions_time"
                    android:textFontWeight="800"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/train_directions_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:contentDescription="@string/train"
                    android:src="@drawable/ic_baseline_directions_transit_filled_24"
                    />

                <TextView
                    android:id="@+id/train_directions_time"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/train_directions_time"
                    android:textFontWeight="800"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/bike_directions_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:contentDescription="@string/bike"
                    android:src="@drawable/ic_baseline_directions_bike_24"
                    />

                <TextView
                    android:id="@+id/bicycle_directions_time"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/bicycle_directions_time"
                    android:textFontWeight="800"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/bus_directions_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:contentDescription="@string/bus"
                    android:contextClickable="true"
                    android:src="@drawable/ic_baseline_directions_bus_24"
                    />

                <TextView
                    android:id="@+id/bus_directions_time"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/bus_directions_time"
                    android:textFontWeight="800"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/walk_directions_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:src="@drawable/ic_baseline_directions_walk_24"
                    android:contentDescription="@string/walk" />

                <TextView
                    android:id="@+id/walk_directions_time"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:text="@string/walk_directions_time"
                    android:textFontWeight="800"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </FrameLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>


