<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="user"
            type="com.example.journey_dp.data.firebase.UserWithUID" />

        <variable
            name="userListener"
            type="com.example.journey_dp.ui.adapter.events.UserEventListener" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_item_layout"
        android:visibility="visible"
        android:tag="@{user.userId}"
        app:contentPadding="4dp"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        tools:context=".ui.fragments.journey.FindUsersFragment"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/user_profile_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/btn"
            app:cardElevation="8dp"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_profile_picture"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:padding="4dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/color3"
                app:strokeWidth="2dp"
                android:src="@drawable/me"
                android:layout_margin="8dp"
                android:contentDescription="@string/profile_picture"
                android:onClick="@{() -> userListener.onClick(user.userId)}"

                />

            <LinearLayout
                android:id="@+id/user_layout_for_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginEnd="86dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:layout_gravity="top|center"
                >

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/background"
                    android:text="@string/test_name_of_user"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="11sp"
                    android:gravity="left|center"
                    android:textStyle="bold"
                    android:text="@string/test_name_of_user"
                    android:textColor="@color/background"
                    android:drawablePadding="4dp"
                    app:drawableLeftCompat="@drawable/ic_baseline_email_24"
                    app:drawableTint="@color/background" />

                <Button
                    android:id="@+id/follow_button"
                    android:tag="@{user.userId}"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/color1"
                    android:text="@string/follow"
                    android:visibility="visible"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/following"
                    android:tag="@{user.userId}"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/color2"
                    android:text="@string/following"
                    android:clickable="false"
                    android:textSize="11sp"
                    android:visibility="gone"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    android:onClick="@{() -> userListener.onClick(user.userId)}"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/request_send"
                    android:tag="@{user.userId}"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/checked"
                    android:text="@string/send_a_request"
                    android:visibility="gone"
                    android:textSize="11sp"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    android:clickable="false"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/unfollow_button"
                    android:layout_width="160dp"
                    android:tag="@{user.userId}"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/unfollow"
                    android:text="@string/unfollow"
                    android:visibility="gone"
                    android:textSize="11sp"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>